--- a/css/frame-footers.css
+++ b/css/frame-footers.css
@@ -25,6 +25,7 @@
     display: flex;
     padding-top: 10px;
     flex-wrap: wrap;
+    justify-content: flex-end;
 }
 .footer p {
     font-size: 1.2rem;
@@ -33,6 +34,12 @@
 }
 .footer p span{
     font-size: 1.5rem;
+    font-weight: bold;
+    color: #2196f3;
+    margin: 0;
+}
+.footer p i{
+    font-size: 1.2rem;
     font-weight: bold;
     color: #2196f3;
     margin: 0;
@@ -50,6 +57,10 @@
 .footer .link a {
     font-size: 1.2rem;
     color: var(--main-color);
+}
+.footer .link a:hover {
+    font-size: 1.2rem;
+    color: #7b7b7b;
 }
 
 /* end footer */
