--- a/css/header-sticky.css
+++ b/css/header-sticky.css
@@ -1,7 +1,7 @@
 
 :root {
     --master-color:black;
-    --altrnat1-color:#9e9e9e;
+    --altrnat1-color:#c5c4c4;
 }
 a {
     display: block;
@@ -60,6 +60,7 @@ a {
     color: var(--master-color);
     font-size: 1.1rem;
     letter-spacing: 1.3px;
+    transition: .3s;
 }
 .header .nav a:hover {
     background-color: var(--altrnat1-color);
