--- a/css/frame-footers.css
+++ b/css/frame-footers.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgba(27, 27, 50, 0.8);;
+    min-height: 300px;
 }
 
 @media(min-width:992px) {
