--- a/css/header-sticky.css
+++ b/css/header-sticky.css
@@ -27,7 +27,6 @@ a {
     align-items: center;
     position: relative;
     height: 60px;
-    background-color: #c8c8c8ab;
 }
 
 .header .log {
@@ -43,7 +42,7 @@ a {
     padding-right: 10px;
     font-size: 1.8rem;
     font-weight: bold;
-    color: white;
+    color: #2196f3;
 }
 .header .nav {
     display: flex;
@@ -61,9 +60,11 @@ a {
     font-size: 1.1rem;
     letter-spacing: 1.3px;
     transition: .3s;
+    border-radius: 5px;
 }
 .header .nav a:hover {
-    background-color: var(--altrnat1-color);
+    background-color: #c5c4c4a1;
+
     }
 /* start icon  */
 .header .icon {
@@ -92,7 +93,6 @@ width: 100%;
         left: 0;
         flex-direction: column;
         min-height: calc(40vh - 60px);
-        background-color: var(--altrnat1-color);
         justify-content: flex-start;
     } 
     .header .open{
@@ -105,6 +105,8 @@ width: 100%;
         font-size: 1.3rem;
         letter-spacing: 1.3px;
         width: 100%;
+        background-color: #0000001a;
+        margin-bottom: 2px;
     }
 } 
 /* start media quary */
